constellation-trainer/src/components/styles.css
#parent{
    display: flex;
    flex-direction: row;
    height: 100vh;
    width: 100vw;
    background-color: lightgrey;
}

#leftSideBar{
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    width: 18%;
    min-width: 230px;
    background-color: darkseagreen;
}

.mainBodyList{
    height: 100%;
    width: 67%;
    background-color: #000001;
}

.mainBodyNoList{
    height: 100%;
    width: 82%;
    background-color: #000001;
}

#toggleSwitchContainer{
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 300px;
    width: 90%;
    background-color: burlywood;
    margin-top: 25px;
}

#sortButtonContainer{
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: coral;
    height: fit-content;
    width: 90%;
    margin-top: 20px;
}

.sortButton{
    margin: 20px 0px 20px 0px;
    font-size: 20px;
    border-radius: 8px;
}

#arrowButtonContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: orchid;
    height: 300px;
    width: 90%;
    margin-top: 20px;
}

.arrowButton{
    height: 50px;
    width: auto;
}

.toggleFeature{
    display: flex;
    flex-direction: row;
    justify-content:space-between;
    align-items: center;
    width: 60%;
    height: fit-content;
}


.nameList{
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    border-top: 1px solid black;
    background-color:lightskyblue;
}

.nameListSelected{
    display: flex;
    flex-direction: row;
    justify-content: left;
    align-items: center;
    border-top: 1px solid black;
    background-color: goldenrod;
}


.nameList:hover{
    background-color: lightgray;
}


.listNumber{
    width: 60px;
}

#rightSideBar{
    width: 15%;
    overflow-y: auto;
    background-color: lightskyblue;
}


.mainBodyShowLabel{
    color: white;
    font-size: 36px;
    margin-top: 20px;
}

.mainBodyHideLabel{
    color: #000001;
    font-size: 36px;
    margin-top: 20px;
}

.testStar{
    position: absolute;
    background-color: white;
    height: 8px;
    width: 8px;
    border-radius: 4px;

}




/* #one{
    position: absolute;
    right: 17.5%;
    bottom: 62.72%;
    background-color: yellow;
} */



.wrapper {
    width: 100%;
    /* whatever width you want */
    display: inline-block;
    position: relative;
  }
  .wrapper:after {
    padding-top: 62.5%;
    /* 8:5 ratio */
    display: block;
    content: '';
  }

  .fixedAspectRatio {
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    /* fill parent */
    background-color: black;
    /* let's see it! */
    color: white;
    transform: rotate(180deg);
  }

